The first release is ready!!!

--- a/SNSFFW/SNSFFW.css
+++ b/SNSFFW/SNSFFW.css
@@ -1,8 +1,8 @@
 ﻿/*
-SLIDE and SCROLL - FFW v1.0.0
+SLIDE and SCROLL - FFW v1.1.0
 https://snsffw.slideandscroll.com
 
-Copyright 2018 SLIDE and SCROLL by Daniel Friedrich
+Copyright 2018-2019 SLIDE and SCROLL by Daniel Friedrich
 Released under the MIT license
 
 @author: Daniel Friedrich
